-- 004_create_consumption_logs.sql
-- Persists per-room hourly consumption snapshots generated by the simulator.
-- Price constant: 1 kWh = 13.01 BDT (Bangladeshi Taka)

CREATE TABLE IF NOT EXISTS consumption_logs (
  id           UUID PRIMARY KEY DEFAULT gen_random_uuid(),
  logged_at    TIMESTAMPTZ NOT NULL DEFAULT now(),
  sim_time     TIMESTAMPTZ NOT NULL,
  room_id      TEXT NOT NULL,
  kwh          NUMERIC(10, 4) NOT NULL,
  cost_bdt     NUMERIC(10, 2) NOT NULL
);

CREATE INDEX IF NOT EXISTS consumption_logs_logged_at_idx
  ON consumption_logs (logged_at DESC);

CREATE INDEX IF NOT EXISTS consumption_logs_room_sim_time_idx
  ON consumption_logs (room_id, sim_time DESC);
