@startuml
title Architecture Type 2: Database Schema & Entity Relationships

' hide the spot
hide circle
' avoid problems with { }
skinparam linetype ortho

entity "rooms" as rooms {
  * id : text <<PK>>
  --
  name : text
}

entity "devices" as devices {
  * id : uuid <<PK>>
  --
  * room_id : text <<FK>>
  name : text
  type : device_type (ENUM)
  status : boolean
  wattage : integer
  last_changed_at : timestamptz
}

entity "device_history" as device_history {
  * id : uuid <<PK>>
  --
  * device_id : uuid <<FK>>
  previous_status : boolean
  new_status : boolean
  changed_at : timestamptz
}

entity "alerts" as alerts {
  * id : uuid <<PK>>
  --
  * room_id : text <<FK>>
  type : alert_type (ENUM)
  message : text
  active : boolean
  triggered_at : timestamptz
  resolved_at : timestamptz
}

entity "consumption_logs" as consumption_logs {
  * id : uuid <<PK>>
  --
  logged_at : timestamptz
  sim_time : timestamptz
  room_id : text
  kwh : numeric
  cost_bdt : numeric
}

rooms ||--o{ devices : "has"
rooms ||--o{ alerts : "has"
devices ||--o{ device_history : "logs status changes"

@enduml
